maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:18: error: not found: value sommeAngle
      sommeAngle += 1
      ^PledgeMaze:24: error: not found: value sommeAngle
      sommeAngle += -1
      ^PledgeMaze:29: error: not found: value sommeAngle
        sommeAngle += -1
        ^PledgeMaze:34: error: not found: value sommeAngle
      sommeAngle += 1
      ^